--- a/src/utilities/colors.scss
+++ b/src/utilities/colors.scss
@@ -36,6 +36,10 @@ $colors: (
     yellow: #FFD100,
     dark: #BF9C01,
   ),
+  red: (
+    red: #DE3618,
+    dark: #BF0711,
+  ),
   green: (
     green: #1BFF1A,
   )
